--- a/pet_Lab-checkpoint.ipynb
+++ b/pet_Lab-checkpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,9 @@
     }
    ],
    "source": [
+    "#studentNumber:301000913\n",
+    "#name: Chunghyun Lee\n",
+    "#selectionNumber: COMP 216-001\n",
     "class Pet:\n",
     "    def __init__(self, name, number):\n",
     "        self.name = name\n",
@@ -73,6 +76,13 @@
     "\n",
     "  print(f'\\n{x}:{p}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
